--- a/Game.of.Codes/DESCRIPTION
+++ b/Game.of.Codes/DESCRIPTION
@@ -1,13 +1,11 @@
 Package: Game.of.Codes
-Title: Game of Codes
+Type: Package
+Title: Game of Codes - A Song of R a Python
 Version: 0.0.0.9000
-Authors@R: person(“DanielJohannes”, “BarretoSeebauer”, email = “daniel.martinsdealmeidabarreto@sciencespo.fr”, role = c("aut", "cre"))
-Description: Based on the dataset „character-deaths.csv“, downloaded from
-    https://www.kaggle.com, we analyzed the timing of death of characters from the
-    popular book series „A song of ice and fire“ by George R. R. Martin.
-Depends:
-    R (>= 3.3.1)
-License: What license is it under?
-Encoding: UTF-8
+Date: 2016-11-30
+Authors@R: person(“Daniel”, “Barreto”, email = “daniel.martinsdealmeidabarreto@sciencespo.fr”, role = c("aut", "cre”))
+Description: Using a database on death of characters from the book series “A Song of Ice and Fire”, by George R. R. Martin, this package helps evaluate the life expectancy of characters.
+License: MIT
 LazyData: true
 RoxygenNote: 5.0.1
+Encoding: pt_BR.UTF-8
